--- a/css/style.css
+++ b/css/style.css
@@ -53,10 +53,10 @@ h4, h5, h6, .h4, .h5, .h6 {
     border: 0;
 }
 
-.btn.btn-primary:hover {
+/* .btn.btn-primary:hover {
     background: var(--bs-dark) !important;
     color: var(--bs-primary) !important;
-}
+} */
 
 .btn {
     font-weight: 600;
