--- a/css/style.css
+++ b/css/style.css
@@ -153,10 +153,11 @@ h4, h5, h6, .h4, .h5, .h6 {
 
 
 /*** Events Start ***/
-/* figure this out */
 .event .tab-class .nav-item a.active {
-    background: var(--bs-primary) !important;
+    /* background: var(--bs-primary) !important; */
+    background: rgba(128, 0, 0, 0.7) !important;
 }
+
 
 .event .event-img .event-overlay {
     position: absolute;
