--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,8 @@ h4, h5, h6, .h4, .h5, .h6 {
 
 /*** Menu Start ***/
 .menu .nav-item a.active {
-    background: var(--bs-primary) !important;
+    /* background: var(--bs-primary) !important; */
+    background: rgba(128, 0, 0, 0.7) !important;
 }
 
 .menu .menu-item .border-bottom {
